# vera

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  __init__.py  glfw3.i  glm.i  setup.py  vera.i
.github/workflows/: build.yml
cmake/: ECMFindModuleHelpers.cmake  FindBROADCOM.cmake  FindEGL.cmake  FindMMAL.cmake  FindXCB.cmake
examples/: CMakeLists.txt
examples/primitives2d/: CMakeLists.txt  main.cpp
include/vera/: app.h  draw.h  font.h  fs.h  math.h  pixel.h  scene.h  time.h  window.h
include/vera/geom/: boundingBox.h  meshes.h  ops.h  triangle.h
include/vera/gl/: cubemapFace.h  defines.h  fbo.h  flood.h  gl.h  pingpong.h  pyramid.h  shader.h  texture.h  textureBump.h  textureCube.h  textureProps.h  textureStream.h  textureStreamAV.h  textureStreamAudio.h  textureStreamMMAL.h  textureStreamOMX.h  textureStreamSequence.h  uniform.h  vbo.h  vertexLayout.h
include/vera/io/: gltf.h  obj.h  ply.h  stl.h
include/vera/ops/: color.h  draw.h  env.h  fs.h  geom.h  image.h  intersection.h  math.h  meshes.h  pixel.h  string.h  time.h
include/vera/scene/: camera.h  label.h  light.h  model.h  sky.h
include/vera/shaders/: billboard.h  default.h  defaultShaders.h  default_buffers.h  default_scene.h  devlook.h  draw.h  dynamic_billboard.h  fxaa.h  gsplat.h  jumpFlood.h  light_ui.h  plot.h  poissonfill.h
include/vera/types/: boundingBox.h  bvh.h  camera.h  font.h  gsplat.h  image.h  label.h  light.h  line.h  material.h  mesh.h  model.h  node.h  plane.h  polarPoint.h  polyline.h  props.h  ray.h  scene.h  shape.h  sky.h  triangle.h
include/vera/xr/: holoPlay.h  xr.h
src/: CMakeLists.txt  app.cpp  draw.cpp  font.cpp  fs.cpp  pixel.cpp  scene.cpp  string.cpp  time.cpp  window.cpp
src/devices/: holoPlay.cpp
src/geom/: line.cpp  mesh.cpp  meshes.cpp  ops.cpp  triangle.cpp
src/gl/: defines.cpp  fbo.cpp  flood.cpp  gl.cpp  pingpong.cpp  pyramid.cpp  shader.cpp  texture.cpp  textureBump.cpp  textureCube.cpp  textureProps.cpp  textureStreamAV.cpp  textureStreamAudio.cpp  textureStreamMMAL.cpp  textureStreamOMX.cpp  textureStreamSequence.cpp  uniform.cpp  vbo.cpp  vertexLayout.cpp
src/io/: gltf.cpp  obj.cpp  ply.cpp  stl.cpp
src/ops/: color.cpp  draw.cpp  env.cpp  fs.cpp  geom.cpp  image.cpp  intersection.cpp  math.cpp  meshes.cpp  pixel.cpp  string.cpp  time.cpp
src/scene/: camera.cpp  label.cpp  light.cpp  material.cpp  model.cpp  node.cpp  sky.cpp
src/shaders/: defaultShaders.cpp
src/types/: bvh.cpp  camera.cpp  font.cpp  gsplat.cpp  image.cpp  label.cpp  light.cpp  line.cpp  material.cpp  mesh.cpp  model.cpp  node.cpp  polarPoint.cpp  polyline.cpp  scene.cpp  shape.cpp  sky.cpp  triangle.cpp
src/xr/: holoPlay.cpp  xr.cpp
